--- a/HomeServer/ClientApp/angular.json
+++ b/HomeServer/ClientApp/angular.json
@@ -129,5 +129,8 @@
       }
     }
   },
-  "defaultProject": "HomeServer"
+  "defaultProject": "HomeServer",
+  "cli": {
+    "analytics": false
+  }
 }
