--- a/HomeServer/ClientApp/package.json
+++ b/HomeServer/ClientApp/package.json
@@ -14,17 +14,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.3",
-    "@angular/common": "^14.0.3",
-    "@angular/compiler": "^14.0.3",
-    "@angular/core": "^14.0.3",
-    "@angular/forms": "^14.0.3",
-    "@angular/platform-browser": "^14.0.3",
-    "@angular/platform-browser-dynamic": "^14.0.3",
-    "@angular/platform-server": "^14.0.3",
-    "@angular/router": "^14.0.3",
-    "bootstrap": "^5.1.3",
-    "jquery": "^3.6.0",
+    "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.0.0",
+    "@angular/common": "~13.3.0",
+    "@angular/compiler": "~13.3.0",
+    "@angular/core": "~13.3.0",
+    "@angular/forms": "~13.3.0",
+    "@angular/platform-browser": "~13.3.0",
+    "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/router": "~13.3.0",
+    "@nebular/eva-icons": "9.1.0-rc.6",
+    "@nebular/theme": "^9.1.0-rc.6",
+    "eva-icons": "^1.1.2",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
@@ -33,22 +34,22 @@
     "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.3",
-    "@angular/cli": "^14.0.3",
-    "@angular/compiler-cli": "^14.0.3",
-    "@types/jasmine": "~4.0.3",
+    "@angular-devkit/build-angular": "~13.3.9",
+    "@angular/cli": "~13.3.9",
+    "@angular/compiler-cli": "~13.3.0",
+    "@schematics/angular": "~13.3.9",
+    "@types/jasmine": "~3.10.0",
     "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^18.0.0",
-    "jasmine-core": "~4.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
-    "typescript": "~4.7.4"
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~4.0.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "~4.6.2"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
-  },
-  "optionalDependencies": {}
+  }
 }
